--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "serve-index": "^1.9.1",
-    "socket.io": "2.1.1"
+    "socket.io": "^2.1.1"
   },
   "scripts": {
     "start": "node server.js"
